Subindoalteração de pastas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runarcana RPG</title>
-    <link rel="shortcut icon" href="dice_d_icon_194967.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/dice_d_icon_194967.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
